feat: implement full-stack garage management system including admin dashboard, service workflows, and customer payment portal